--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -21,7 +21,7 @@
             <% end %>
             <% if user_signed_in? and can? :manage, Broadcast %>
               <li class="muted"> &middot; </li>
-              <li><%= link_to('Broadcasts', broadcasts_path) %></li>
+              <li><%= link_to(t('global.broadcasts'), broadcasts_path) %></li>
             <% end %>
         </ul>
       </div>
