--- a/app/views/classifications/index.html.erb
+++ b/app/views/classifications/index.html.erb
@@ -1,29 +1,34 @@
 <% provide(:title, t('classes.index.title')) %>
-<legend><%= t('classes.index.legend') %></legend>
 
-<% if @classifications.length == 0 %>
-  <p><%= t('classes.index.empty_list') %></p>
-<% else %>
-	<div class="table-responsive">
-	<table class="table table-condensed table-striped">
-	  <thead>
-	    <tr>
-	      <th><%= t('global.name') %></th>
-	      <th style="width:17px;"></th>
-	    </tr>
-	  </thead>
-	  <tbody>
-	  <% @classifications.each do |classification| %>
-	    <tr>
-	      <td><%= classification.name %></td>
-	    </tr>
-	  <% end %>
-	  </tbody>
-	</table>
-	</div>
-
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <div class="panel-title"><%= t('classes.index.legend') %></div>
+  </div>
+  <div class="panel-body panel-table">
+    <% if @classifications.length == 0 %>
+      <p><%= t('classes.index.empty_list') %></p>
+    <% else %>
+    	<div class="table-responsive">
+    	<table class="table table-condensed table-striped">
+    	  <thead>
+    	    <tr>
+    	      <th><%= t('global.name') %></th>
+    	      <th style="width:17px;"></th>
+    	    </tr>
+    	  </thead>
+    	  <tbody>
+    	  <% @classifications.each do |classification| %>
+    	    <tr>
+    	      <td><%= classification.name %></td>
+    	    </tr>
+    	  <% end %>
+    	  </tbody>
+    	</table>
+    	</div>
+    <% end %>
+  </div>
+  <div class="panel-footer">
     <%= paginate @classifications %>
-<% end %>
-<div>
-  <%= link_to(t('classes.index.new_class'), new_classification_path, :class => 'btn btn-mini btn-primary') %>
+    <%= link_to(t('classes.index.new_class'), new_classification_path, :class => 'btn btn-mini btn-primary') %>
+  </div>
 </div>
