--- a/app/views/home/batch.html.erb
+++ b/app/views/home/batch.html.erb
@@ -3,52 +3,57 @@
 <%= bootstrap_form_for :entry, style: :horizontal, left: "col-sm-2", right: "col-sm-4", help: :block do |f| %>
   <%= f.alert_message t('global.errors') %>
   
-  <legend><%= t('home.batch.legend') %></legend>
-  <div class="alert alert-danger">
-    <strong><%= t('home.batch.warning') %></strong> <%= t('home.batch.warning_msg') %>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <div class="panel-title"><%= t('home.batch.legend') %></div>
+    </div>
+    <div class="panel-body">
+      <div class="alert alert-danger">
+        <strong><%= t('home.batch.warning') %></strong> <%= t('home.batch.warning_msg') %>
+      </div>
+
+      <%= f.text_area :ordernumbers, label: t('home.batch.ordernumbers') %>
+
+      <hr/>
+
+      <%= f.select :appliance_id, @appliance_names, label: t('global.appliance') %>
+      <%= f.text_field :brand, label: t('global.brand') %>
+      <%= f.text_field :typenum, label: t('global.typenum') %>
+      <%= f.text_field :serialnum, label: t('global.serialnum') %>
+
+      <%= f.text_field :defect, label: t('global.defect') %>
+      <%= f.text_field :repair, label: t('global.repair') %>
+      <%= f.text_field :ordered, label: t('global.ordered') %>
+
+      <%= f.text_field :testera, label: t('global.testera') %>
+      <%= f.text_field :testerb, label: t('global.testerb') %>
+
+      <%= f.form_group :test do %>
+        <%= f.check_box :test, label: t('global.test') %>
+      <% end %>
+      <%= f.form_group :repaired do %>
+        <%= f.check_box :repaired, label: t('global.repaired') %>
+      <% end %>
+      <%= f.form_group :ready do %>
+        <%= f.check_box :ready, label: t('global.ready') %>
+      <% end %>
+      <%= f.form_group :scrap do %>
+        <%= f.check_box :scrap, label: t('global.scrap') %>
+      <% end %>
+      <%= f.form_group :accessoires do %>
+        <%= f.check_box :accessoires, label: t('global.accessoires') %>
+      <% end %>
+
+      <%= f.select :class_id, @class_names, label: t('global.class') %>
+
+      <%= f.text_area :note, label: t('global.note') %>
+
+      <%= f.hidden_field :company, :value => session[:company] %>
+    </div>
+    <div class="panel-footer">
+      <%= f.submit t('home.batch.button'), data: { disable_with: t('home.batch.button_send') }, class: "btn btn-primary", 'onclick' => '$(\'.loading-spinner\').css(\'display\', \'inline-block\');' %>
+    </div>
   </div>
-
-  <%= f.text_area :ordernumbers, label: t('home.batch.ordernumbers') %>
-
-  <hr/>
-
-  <%= f.select :appliance_id, @appliance_names, label: t('global.appliance') %>
-  <%= f.text_field :brand, label: t('global.brand') %>
-  <%= f.text_field :typenum, label: t('global.typenum') %>
-  <%= f.text_field :serialnum, label: t('global.serialnum') %>
-
-  <%= f.text_field :defect, label: t('global.defect') %>
-  <%= f.text_field :repair, label: t('global.repair') %>
-  <%= f.text_field :ordered, label: t('global.ordered') %>
-
-  <%= f.text_field :testera, label: t('global.testera') %>
-  <%= f.text_field :testerb, label: t('global.testerb') %>
-
-  <%= f.form_group :test do %>
-    <%= f.check_box :test, label: t('global.test') %>
-  <% end %>
-  <%= f.form_group :repaired do %>
-    <%= f.check_box :repaired, label: t('global.repaired') %>
-  <% end %>
-  <%= f.form_group :ready do %>
-    <%= f.check_box :ready, label: t('global.ready') %>
-  <% end %>
-  <%= f.form_group :scrap do %>
-    <%= f.check_box :scrap, label: t('global.scrap') %>
-  <% end %>
-  <%= f.form_group :accessoires do %>
-    <%= f.check_box :accessoires, label: t('global.accessoires') %>
-  <% end %>
-
-  <%= f.select :class_id, @class_names, label: t('global.class') %>
-
-  <%= f.text_area :note, label: t('global.note') %>
-
-  <%= f.hidden_field :company, :value => session[:company] %>
-
-  <%= f.form_group do %>
-    <%= f.submit t('home.batch.button'), data: { disable_with: t('home.batch.button_send') }, class: "btn btn-primary", 'onclick' => '$(\'.loading-spinner\').css(\'display\', \'inline-block\');' %>
-  <% end %>
 <% end %>
 
 <%= link_to t('global.back'), root_path %>
